--- a/css/common.scss
+++ b/css/common.scss
@@ -1,16 +1,22 @@
-$color-background: #F2F1ED;
-$font-family-main: 'Raleway', sans-serif;
-$color-main: #AFA8A2;
-$color-active: #D66360;
-$color-main-hover: #333333;
+@font-face{
+  font-family: Geomanist;
+  src: url('../fonts/Geomanist-Regular.otf');
+}
 
-html, body{
-  font-family: $font-family-main !important;
+$color-background: #F3F3F3;
+$font-family-main: 'Raleway', sans-serif;
+$font-geo: Geomanist;
+$color-main:  #666B6E;
+$color-active: #B8807F;
+$color-main-hover: #3F3F3F;
+$color-navbar: #373E53;
+
+html, body, label{
+  font-family: $font-geo !important;
   font-size: 16px;
   font-weight: 300 !important;
   text-decoration: none !important;
   -webkit-font-smoothing: antialiased !important;
-  //color: #666 !important;
   background-color: $color-background;
   z-index: 2;
 }
@@ -19,13 +25,12 @@ p, li{
   color: $color-main !important;
 }
 
-p:hover, li:hover{
-  color: $color-main-hover !important;
-}
-
 a{
   text-decoration: none !important;
   color: $color-active;
+}
+a:hover{
+  color: #985C5A;
 }
 
 .navbar-default{
@@ -49,7 +54,7 @@ a{
     background: transparent;
     a{
       color: white;
-      font-family: $font-family-main;
+      font-family: $font-geo;
       font-weight:300;
     }
   }
@@ -91,17 +96,138 @@ a{
 
 #nav.affix{
   position:fixed;
-  background-color:#272731;
+  background-color: $color-navbar;
   -webkit-transition: all .6s ease-in-out;
   .container-fluid{
     #bs-example-navbar-collapse-1{
       .navbar-nav{
           li.dropdown{
             ul.dropdown-menu{
-              background-color:#272731;
+              background-color:$color-navbar;
             }
           }
       }
     }
   }
 }
+
+footer {
+  text-align: center;
+  margin: 0;
+  background: $color-navbar;
+  position: relative; }
+
+.footer-container {
+  width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
+  max-height: 300px;
+  display: inline-block; }
+
+@media screen and (max-width: 767px) {
+  .footer-container {
+    max-width: 100%; }
+
+  .subscr-sector {
+    padding-right: 0; }
+    .subscr-sector .subscription-header {
+      margin-bottom: 20px;
+      margin-top: 10px;
+      font-size: 16px; }
+    .subscr-sector .subscription {
+      margin-top: 0; }
+
+  .social-sector {
+    padding-left: 0; }
+    .social-sector .social-header {
+      font-size: 15px; }
+
+  .copyrights .list-inline {
+    text-align: center; }
+
+  .caption {
+    font-size: 35px !important; }
+
+  .contrast h4 {
+    font-size: 20px !important; }
+
+  .input-group-btn a.button {
+    padding: 0; } }
+.copyrights {
+  text-align: center;
+  margin: 40px auto 0px auto; }
+
+.copyright {
+  margin: 0;
+  color: $color-background !important;
+  margin-top: 20px; }
+
+.list-inline {
+  text-align: left;
+  margin-left: 10px; }
+  .list-inline li {
+    font-weight: 300; }
+
+.social_list {
+  display: inline-block;
+  vertical-align: middle; }
+  .social_list a {
+    text-decoration: none !important; }
+
+.social_btn {
+  display: inline;
+  color: white; }
+
+p, li {
+  text-decoration: none; }
+
+.social-header {
+  color: $color-background !important;
+  text-align: left;
+  line-height: 3;
+  display: block;
+  width: 100%;
+  font-weight: 500;
+  font-size: 20px; }
+
+.icon, .social-icon {
+  display: block;
+  width: 35px;
+  padding: 10px;
+  margin-right: 10px;
+  margin-top: 3px;
+  float: left;
+  color: #FFF;
+  font-size: 16px;
+  text-align: center; }
+
+.social-icon {
+  height: 35px;
+  margin-top: 5px;
+  margin-right: 5px; }
+  .social-icon i {
+    line-height: 2px; }
+
+.social-icon.fb {
+  background: #3B5998; }
+
+.social-icon.google {
+  background: #DD4B39; }
+
+.social-icon.linkedIn {
+  background: #3E5065; }
+
+.footer-row {
+  margin: 0; }
+
+.subscription-header {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 500;
+  color: $color-background !important;
+  text-align: right;
+  margin-bottom: 0; }
+
+
+.subscription {
+  margin-top: 20px; }
